# eval-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  eval_config.yaml  pyproject.toml
configs/candidates/: stub-chunking-256.yaml  stub-chunking-512.yaml  stub-zvec-8082.yaml
configs/stubs/: chunking-256.yaml  chunking-512.yaml
contracts/: README.md  eval_questions.schema.json  legal_rag_bench_query_output.schema.json  parser_output.schema.json  rag_query_output.schema.json
docs/: DeepEvalandPhoenix.md  deepeval-vs-ragas-comparison.md  evaluation-improvement-todos.md  evaluation-system-walkthrough-verified.md  evaluation-system-walkthrough.md  legal-rag-bench-guide.md  packages.md  workflows.md
docs/design/: 001-architecture-overview.md  002-data-flow-detailed.md  003-schema-design.md  004-metrics-reference.md  005-adapter-implementation.md  evaltools.md
docs/guides/: custom-dataset-guide.md  faq-omnidocbench-users.md  opensearch-integration.md  parser-output-schema-explained.md
docs/todos/: pbis-ab-routing-shadow.md  pbis-ab-routing.md  pbis-call-orchestration.md  pbis-collect-metrics-citations.md  pbis-framework-retrieval-store-comparison.md  pbis-load-evaluation.md  pbis-metrics-retrieval.md  pbis-offline-evaluation.md  pbis-run-evaluation-framework.md  pbis-shadow-evaluation-rewritten.md  pbis-shadow-evaluation.md  pbis-store-results.md  phoenixvsmlflow.md  ragasdeepeval.md  shadow_evaluation.md
eval_questions/: parsing.json  rag.json
examples/: omnidocbench_adapter.py  opensearch_rag_adapter.py
examples/example_results/: README.md  parsing_dp_bench_fast.csv  parsing_dp_bench_fast_summary.json  parsing_omnidocbench_docling_summary.json  rag_legal_rag_bench_nano.csv  rag_legal_rag_bench_nano_details.json  rag_legal_rag_bench_nano_summary.json  rag_legalbench_nano.csv  rag_legalbench_nano_summary.json
scripts/: __init__.py  download_datasets.py  prepare_legal_rag_bench_corpus.py  verify_phoenix_cost_column.py
src/eval_harness/: __init__.py  config.py
tests/: conftest.py
tests/adapters/: test_evaluator_comparison.py  test_full_evaluator_replacement.py  test_metric_naming_migration.py  test_phoenix_eval_adapter.py
tests/experiments/: test_cost_summary.py  test_datasets.py  test_deepeval_evaluators.py  test_runner.py
tests/integration/: __init__.py  test_deepeval_integration.py  test_docling_eval_integration.py  test_parsing_pipeline.py  test_phoenix_experiments_api.py  test_phoenix_native_integration.py  test_phoenix_native_phase1.py  test_phoenix_native_phase3.py  (+3 more)
(+180 files in other folders)
